apps/media/qbittorrent/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-external
  namespace: media
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/icon: mdi:download
    hajimari.edgard.org/enabled: "true"
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
  hostnames:
    - qbittorrent.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-internal
  namespace: media
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - qbittorrent.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: qbittorrent-external-auth
  namespace: media
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: qbittorrent-external
  oidc:
    provider:
      issuer: https://id.edgard.org
    clientID: envoy-gateway
    clientSecret:
      name: envoy-oidc-client
    redirectURL: https://qbittorrent.edgard.org/oauth2/callback
    logoutPath: /oauth2/logout
    cookieDomain: edgard.org
    scopes:
      - openid
      - profile
      - email
